updated links and optimized ux

--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
       </p>
     </div>
     <div class="download-button">
-      <div class="ios btn">Download for iOS</div>
-      <div class="mac btn">Download for Mac</div>
+      <button class="ios btn">Download for iOS</button>
+      <button class="mac btn">Download for Mac</button>
+      <!-- <div class="ios btn">Download for iOS</div>
+      <div class="mac btn">Download for Mac</div> -->
     </div>
   </header>
   <section class="main-feature one">
@@ -147,16 +149,16 @@
       <img src="./images/logo.svg" alt="" width="75px">
     </div>
     <div class="page-links">
-      <p>FAQs</p>
-      <p>Contact Us</p>
-      <p>Privacy Policy</p>
-      <p>Press Kit</p>
-      <p>Install Guide</p>
+      <a href="#">FAQs</a>
+      <a href="#">Contact Us</a>
+      <a href="#">Privacy Policy</a>
+      <a href="#">Press Kit</a>
+      <a href="#">Install Guide</a>
     </div>
     <div class="social-media">
-      <img src="./images/icon-facebook.svg" alt="">
-      <img src="./images/icon-instagram.svg" alt="">
-      <img src="./images/icon-twitter.svg" alt="">
+      <a href="https://www.facebook.com/" target="_blank"><img src="./images/icon-facebook.svg" alt=""></a>
+      <a href="https://www.instagram.com/" target="_blank"><img src="./images/icon-instagram.svg" alt=""></a>
+      <a href="https://twitter.com/" target="_blank"><img src="./images/icon-twitter.svg" alt=""></a>
     </div>
   </footer>
 
